---------------------------------------------------------------------------------------------------
Version: 3.0.14
Date: ???
  Changes:
    - Fixed some recipes not having defined catalysts
---------------------------------------------------------------------------------------------------
Version: 3.0.13
Date: 2025-2-26
  Changes:
    - Migrated the internal name of the "vacuum-tube-electronics" technology to "electronics". Resolves https://github.com/pyanodon/pybugreports/issues/453
    - Migrated the internal name of the "railway-mk01" technology to "railway". Resolves https://github.com/pyanodon/pybugreports/issues/453
    - Fixed mega oil derricks (derrick MK 04) may not be installed in existing bitumen seeps which were popped by mk 1-3. Resolves https://github.com/pyanodon/pybugreports/issues/869
    - The vanilla oil refinery is now hidden from factoriopedia.
    - The vanilla pumpjack is now hidden from factoriopedia.
    - Crude oil no longer shows up in the worldgen sliders when making a new save.
    - Deleted the graphics for vanilla pumpjack and vanilla oil refinery in order to save VRAM.
    - Updated Ukrainian translation.
---------------------------------------------------------------------------------------------------
Version: 3.0.12
Date: 2025-1-20
  Changes:
    - Allowed pumpjacks to be flippable once again.
    - Updated pumpjack pipe connections to prevent floating connector graphics in certain rotations.
---------------------------------------------------------------------------------------------------
Version: 3.0.11
Date: 2025-1-20
  Changes:
    - Removed non hot air advanced casting recipes and allowed productivity in them instead.
    - Moved hot air glassware from py science 1 unlock to hot air unlock. Resolves https://github.com/pyanodon/pybugreports/issues/811
    - Bitumen extractors no longer show "disabled by script" and instead shows a custom status explaining that it requires drilling fluid.